<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="save_goods_infor">保存物品信息</string>
    <string name="find_new_goods">选择物品</string>
	<string name="scanButton">扫描解码 </string>
<string name="pictureButton">图片解码 </string>
<string name="enterButton">输入解码 </string>
  <string name="app_picker_name">应用</string>
  <string name="bookmark_picker_name">书签</string>
  <string name="button_add_calendar">添加事件至日历</string>
  <string name="button_add_contact">添加联系人</string>
  <string name="button_back">返回</string>
  <string name="button_book_search">打开图书搜索</string>
  <string name="button_cancel">取消</string>
  <string name="button_clipboard_empty">清空剪切板</string>
  <string name="button_custom_product_search">自定义搜索</string>
  <string name="button_dial">拨号</string>
  <string name="button_done">完成</string>
  <string name="button_email">发送email</string>
  <string name="button_get_directions">获取地址</string>
  <string name="button_google_shopper">谷歌购物</string>
  <string name="button_mms">发送彩信</string>
  <string name="button_ok">确定</string>
  <string name="button_open_browser">打开浏览器</string>
  <string name="button_product_search">打开产品搜索</string>
  <string name="button_search_book_contents">搜索图书内容</string>
  <string name="button_share_app">共享应用</string>
  <string name="button_share_bookmark">分享书签</string>
  <string name="button_share_by_email">通过email分享</string>
  <string name="button_share_by_sms">通过短信分享</string>
  <string name="button_share_clipboard">分享剪切板</string>
  <string name="button_share_contact">分享联系人</string>
  <string name="button_show_map">显示地图</string>
  <string name="button_sms">发送短信</string>
  <string name="button_web_search">网页搜索</string>
  <string name="button_wifi">连接到网络</string>
  <string name="contents_contact">联系人信息</string>
  <string name="contents_email">Email地址</string>
  <string name="contents_location">地理坐标</string>
  <string name="contents_phone">电话号码</string>
  <string name="contents_sms">短信地址</string>
  <string name="contents_text">纯文本</string>
  <string name="history_clear_one_history_text">删除</string>
  <string name="history_clear_text">删除历史</string>
  <string name="history_email_title">条码扫描器历史</string>
  <string name="history_empty">空的</string>
  <string name="history_empty_detail">没有条码扫描已记录</string>
  <string name="history_send">发送历史</string>
  <string name="history_title">历史</string>
  <string name="menu_about">关于</string>
  <string name="menu_encode_mecard">使用MECARD</string>
  <string name="menu_encode_vcard">使用vCard</string>
  <string name="menu_help">帮助</string>
  <string name="menu_history">历史</string>
  <string name="menu_settings">设置</string>
  <string name="menu_share">分享</string>
  <string name="menu_decode_image">解码图片</string>
  <string name="menu_decode_1d_barcode">输入一维码</string>
  <string name="msg_about">基于ZXing开源条码引擎</string>
  <string name="msg_bulk_mode_scanned">批量扫描：找到条码，已保存</string>
  <string name="msg_camera_framework_bug">抱歉，Android相机出现问题。您可能需要重启设备。</string>
  <string name="msg_default_format">格式</string>
  <string name="msg_default_meta">元数据</string>
  <string name="msg_default_mms_subject">Hi</string>
  <string name="msg_default_status">请将条码置于取景框内扫描。  </string>
  <string name="msg_default_time">时间</string>
  <string name="msg_default_type">类型</string>
  <string name="msg_encode_contents_failed">无法根据已有数据生成条码。   </string>
  <string name="msg_google_books">谷歌图书</string>
  <string name="msg_google_product">谷歌购物</string>
  <string name="msg_google_shopper_missing">谷歌购物未安装</string>
  <string name="msg_install_google_shopper">谷歌购物是一款将条码扫描和商品比价相结合的应用，谷歌购物不使用浏览器，您想尝试吗？</string>
  <string name="msg_intent_failed">抱歉，无法打开所需软件。 条码内容可能无效。</string>
  <string name="msg_redirect">重定向</string>
  <string name="msg_sbc_book_not_searchable">抱歉，无法找到此图书。</string>
  <string name="msg_sbc_failed">抱歉，搜索时遇到错误。</string>
  <string name="msg_sbc_no_page_returned">无页面返回</string>
  <string name="msg_sbc_page">页面</string>
  <string name="msg_sbc_searching_book">搜索图书…</string>
  <string name="msg_sbc_snippet_unavailable">摘录不可用</string>
  <string name="msg_sbc_unknown_page">未知页面</string>
  <string name="msg_share_explanation">您可以通过在自己的手机上显示条码，并使用其它手机扫描此条码的方式进行分享</string>
  <string name="msg_share_subject_line">这是我所扫描条码的内容</string>
  <string name="msg_share_text">或键入一些文字</string>
  <string name="msg_sure">你肯定吗？</string>
  <string name="msg_unmount_usb">抱歉，SD卡不可访问。</string>
  <string name="preferences_actions_title">找到条码时</string>
  <string name="preferences_bulk_mode_summary">连续扫描并保存多个条形码</string>
  <string name="preferences_bulk_mode_title">批量扫描模式</string>
  <string name="preferences_copy_to_clipboard_title">复制到剪切板</string>
  <string name="preferences_custom_product_search_summary" formatted="false">替换：％s=内容，％f=格式，％t=类型</string>
  <string name="preferences_custom_product_search_title">自定义搜索网址</string>
  <string name="preferences_decode_1D_title">扫描 一维条码</string>
  <string name="preferences_decode_Data_Matrix_title">扫描 DM码</string>
  <string name="preferences_decode_QR_title">扫描 QR码</string>
  <string name="preferences_front_light_summary">前灯可用时，打开前灯</string>
  <string name="preferences_front_light_title">前灯</string>
  <string name="preferences_general_title">一般设置</string>
  <string name="preferences_name">设置</string>
  <string name="preferences_play_beep_title">提示音</string>
  <string name="preferences_remember_duplicates_summary">在历史记录中保存重复记录</string>
  <string name="preferences_remember_duplicates_title">记住重复</string>
  <string name="preferences_result_title">结果设置</string>
  <string name="preferences_reverse_image_summary">设备上启用了前置摄像头只</string>
  <string name="preferences_reverse_image_title">反转摄像机的图像</string>
  <string name="preferences_scanning_title">条码类型选择</string>
  <string name="preferences_search_country">搜索国家</string>
  <string name="preferences_supplemental_summary">尝试检索关于条码内容的更多信息</string>
  <string name="preferences_supplemental_title">检索更多信息</string>
  <string name="preferences_vibrate_title">振动</string>
  <string name="result_address_book">找到联系人信息</string>
  <string name="result_calendar">找到日历事件</string>
  <string name="result_email_address">找到email地址</string>
  <string name="result_geo">找到地理坐标</string>
  <string name="result_isbn">找到图书</string>
  <string name="result_product">找到产品</string>
  <string name="result_sms">找到短信地址</string>
  <string name="result_tel">找到电话号码</string>
  <string name="result_text">找到纯文本</string>
  <string name="result_uri">找到URL</string>
  <string name="result_wifi">发现网络配置</string>
  <string name="sbc_name">Google图书搜索</string>
  <string name="share_name">通过条码分享</string>
  <string name="title_about">条码扫描器</string>
  <string name="wifi_changing_network">请求连接到网络\u2026</string>
  <string name="wifi_ssid_label">网络SSID</string>
  <string name="wifi_type_label">类型</string>
  <string name="up_one_level">..返回上一级目录</string>
    <string name="current_dir">..刷新</string>
  <string name="zxing_url">http://code.google.com/p/zxing</string>
  <string name="input_1dbarcode">输入一维条形码</string>
    <string name="hello">Hello World, BlueToothActivity!</string>
    <string name="app_name">高空储物</string>
    <string name="logIn">登陆</string>
      <string name="logIn1">&#160;&#160;&#160;登陆&#160;&#160;&#160;</string>
    <string name="register">注册用户</string>
    <string name="editUserInfo">编辑个人信息</string>
    <string name="editPassword">修改密码</string>
    <string name="setting">设置</string>
    <string name="search">搜索</string>
    <string name="addGoods">添加物品</string>
    <string name="takeGoods">取出物品</string>
    <string name="forgetPassword">忘记密码？</string>
    <string name="quit">退出</string>
    <string name="yourGoods">您的物品如下：</string>
    <string name="userName">用户昵称</string>
    <string name="password">您的密码</string>
    <string name="confrimPassword">确认密码</string>
    <string name="securityQuestion">安全问题</string>
    <string name="securityAnswer">问题答案</string>
    <string name="reset">重置</string>
    <string name="cancel">取消</string>
    <string name="oldPassword">&#160;&#160;&#160;&#160;原密码</string>
    <string name="newPassword">&#160;&#160;&#160;&#160;新密码</string>
    <string name="save">保存</string>
    <color name="black">#FF0000</color>
    <string name="confirmUser">验证用户</string>
    <string name="timeBeforeQualityTime">保质期\n提前提醒时间</string>
    <string name="maxStoreTime">物品\n最长存储时间</string>
    <string name="goods_type">物品种类</string>
    <string name="store_location">存放地点</string>
    <string name="product_time">&#160;&#160;&#160;&#160;生产日期&#160;&#160;&#160;&#160;</string>
    <string name="goods_name">物品名称</string>
    <string name="quality_time">&#160;&#160;&#160;保质期 </string>
    <string name="barcode_scan">从条形码输入</string>
    <string name="print_barcode">打印条形码</string>
    <string name="save_goods_info">存放物品</string>
    <string name="backToMain">返回主界面</string>
    <string name="chooseserialPort">选择串口</string>
    <string name="choosebaudRate">选择波特率</string>
    <string name="stopButton">退出</string>
    <string name="open_serial_success">成功打开端口</string>
    <string name="open_fail">打开端口失败</string>
    <string name="about">程序名称：智能家居\n
        				 版本：V1.0\n
        				 开发者：糜相行\n
        				 </string>
     <string name="userhelp">
         此程序为智能家居控制端，通过此客户端，用户可以实现物品信息的智能输入，物品信息的本地查询与联网查询，物品存储时间及保质期的及时提醒，不同家庭成员之间的隐私保护
     </string>
    

</resources>