<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"  
    android:id="@+id/ScrollView" android:layout_width="fill_parent"  
    	android:layout_height="fill_parent" android:scrollbars="vertical"> 
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        
 


        <TextView
             android:textColor="#000000"
            android:textSize="20dp"
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password" />

        <EditText
             android:textColor="#000000"
            android:textSize="20dp"
            android:id="@+id/passwordEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="textPassword"></EditText>"

    </LinearLayout>

   <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <TextView
             android:textColor="#000000"
            android:textSize="20dp"
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/userName" />


        <EditText
             android:textColor="#000000"
            android:textSize="20dp"
            android:id="@+id/userNameEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="textPersonName" >

            <requestFocus />
        </EditText>

    </LinearLayout>
    
 <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >


        <TextView
             android:textColor="#000000"
            android:textSize="20dp"
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/securityQuestion" />

        <Spinner
             android:textColor="#000000"
            android:textSize="20dp"
            android:id="@+id/securityQuestionSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >


        <TextView
             android:textColor="#000000"
            android:textSize="20dp"
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/securityAnswer" />

        <EditText
             android:textColor="#000000"
            android:textSize="20dp"
            android:id="@+id/securityAnswerEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="text" />

    </LinearLayout>
        
    
	    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        
        android:weightSum="2" >

        <Button
            android:id="@+id/saveButton"
             android:textColor="#000000"
            android:textSize="20dp"
           android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save" />
        

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            
            android:text="@string/cancel"
            android:textColor="#000000"
            android:textSize="20dp"
            android:layout_weight="1"
            />

    </LinearLayout>
    
</LinearLayout>
</ScrollView>