<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"  
    android:id="@+id/ScrollView" android:layout_width="fill_parent"  
    	android:layout_height="fill_parent" android:scrollbars="vertical"> 
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/userName" 
            android:textColor="#000000"
            android:textSize="20dp"/>

        <EditText
            android:id="@+id/userNameEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="textPersonName" 
                android:textColor="#000000"
            android:textSize="20dp">

            <requestFocus />
        </EditText>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password" 
                android:textColor="#000000"
            android:textSize="20dp"/>

        <EditText
            android:id="@+id/passwordEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="textPassword"
                android:textColor="#000000"
            android:textSize="20dp"></EditText>"

    </LinearLayout>
	  <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

	      <TextView
	          android:id="@+id/textView5"
	          android:layout_width="wrap_content"
	          android:layout_height="wrap_content"
	          android:text="@string/confrimPassword" 
	              android:textColor="#000000"
            android:textSize="20dp"/>

	      <EditText
	          android:id="@+id/confirmPasswordEdit"
	          android:layout_width="wrap_content"
	          android:layout_height="wrap_content"
	          android:layout_weight="1"
	          android:inputType="textPassword" 
	              android:textColor="#000000"
            android:textSize="20dp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/securityQuestion" 
                android:textColor="#000000"
            android:textSize="20dp"/>

        <Spinner
            android:id="@+id/securityQuestionSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
                android:textColor="#000000"
            android:textSize="20dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/securityAnswer" 
                android:textColor="#000000"
            android:textSize="20dp"/>

        <EditText
            android:id="@+id/securityAnswerEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="text" 
                android:textColor="#000000"
            android:textSize="20dp"/>

    </LinearLayout>

  

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/registerButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register" 
           	android:textColor="#000000"
            android:textSize="20dp"/>

       

    </LinearLayout>

</LinearLayout>
</ScrollView>