<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"  
    android:id="@+id/ScrollView" android:layout_width="fill_parent"  
    	android:layout_height="fill_parent" android:scrollbars="vertical"> 
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >


    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >


        <TextView
             android:textColor="#000000"
            android:textSize="20dp"
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/newPassword" />


        <EditText
             android:textColor="#000000"
            android:textSize="20dp"
            android:id="@+id/newPasswordEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="textPassword" >
</EditText>

    </LinearLayout>
	  <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >


	      <TextView
	           android:textColor="#000000"
            android:textSize="20dp"
	          android:id="@+id/textView5"
	          android:layout_width="wrap_content"
	          android:layout_height="wrap_content"
	          android:text="@string/confrimPassword" />


	      <EditText
	           android:textColor="#000000"
            android:textSize="20dp"
	          android:id="@+id/confirmPasswordEdit"
	          android:layout_width="wrap_content"
	          android:layout_height="wrap_content"
	          android:layout_weight="1"
	          android:inputType="textPassword" />

    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >


        <Button
             android:textColor="#000000"
            android:textSize="20dp"
            android:id="@+id/editPasswordButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/editPassword" />


    </LinearLayout>
    

</LinearLayout>
</ScrollView>